--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   adaptive_dialog: ^1.1.0
   emoji_picker_flutter: ^1.0.6
   diacritic: ^0.1.3
+  proximity_hash: ^2.0.0
+  fading_edge_scrollview: ^2.0.0
 
 dev_dependencies:
   flutter_test:
