--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Fast app to see bus schedules and plan routes
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -34,9 +34,15 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: "^0.9.2"
 
 flutter:
   uses-material-design: true
   generate: true
   assets:
     - assets/stops.txt
+
+flutter_icons:
+  android: "ic_launcher"
+  ios: false
+  image_path: "icon/app_icon.png"
