--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Fast app to see bus schedules and plan routes
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.2
+version: 1.0.3+3
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -18,7 +18,7 @@ dependencies:
   http: ^0.13.3
   csv: ^5.0.0
   osm_nominatim: ^2.0.1
-  flutter_map: ^0.13.1
+  flutter_map: ^0.14.0
   kdtree: ^0.2.0
   sqflite: ^2.0.0+3
   shared_preferences: ^2.0.7
