--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Fast app to see bus schedules and plan routes
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.5+5
+version: 1.1.0+6
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -14,7 +14,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
-  geolocator: ^7.2.0+1
+  geolocator: ^7.6.0
   http: ^0.13.3
   csv: ^5.0.0
   osm_nominatim: ^2.0.1
@@ -30,6 +30,7 @@ dependencies:
   diacritic: ^0.1.3
   proximity_hash: ^2.0.0
   fading_edge_scrollview: ^2.0.0
+  introduction_screen: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -41,6 +42,8 @@ flutter:
   generate: true
   assets:
     - assets/stops.txt
+    - assets/tutorial_bookmarks.png
+    - assets/tutorial_saved_plan.png
 
 flutter_icons:
   android: "ic_launcher"
