--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <application
-        android:label="QuickBus Tallinn"
+        android:label="Easy Transit Tallinn"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
