--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,23 +14,22 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.17.0
-  geolocator: ^7.6.0
+  geolocator: ^7.7.0
   http: ^0.13.3
   csv: ^5.0.0
   osm_nominatim: ^2.0.1
   flutter_map: ^0.14.0
-  kdtree: ^0.2.0
   sqflite: ^2.0.0+3
   shared_preferences: ^2.0.7
   google_polyline_algorithm: ^3.1.0
-  cupertino_icons: ^1.0.2
   flutter_riverpod: ^0.14.0+3
   adaptive_dialog: ^1.1.0
-  emoji_picker_flutter: ^1.0.6
+  emoji_picker_flutter: ^1.0.7
   diacritic: ^0.1.3
   proximity_hash: ^2.0.0
   fading_edge_scrollview: ^2.0.0
   introduction_screen: ^2.1.0
+  cached_network_image: ^3.1.0
 
 dev_dependencies:
   flutter_test:
