--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Fast app to see bus schedules and plan routes
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.1.0+6
+version: 1.1.1+7
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -43,6 +43,7 @@ flutter:
     - assets/stops.txt
     - assets/tutorial_bookmarks.png
     - assets/tutorial_saved_plan.png
+    - assets/tutorial_starting.png
 
 flutter_icons:
   android: "ic_launcher"
