--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Fast app to see bus schedules and plan routes
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.2.2+10
+version: 1.3.0+11
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -22,8 +22,8 @@ dependencies:
   sqflite: ^2.0.0+3
   shared_preferences: ^2.0.7
   google_polyline_algorithm: ^3.1.0
-  flutter_riverpod: ^0.14.0+3
-  adaptive_dialog: ^1.1.0
+  flutter_riverpod: ^1.0.3
+  adaptive_dialog: ^1.2.0
   emoji_picker_flutter: ^1.0.7
   diacritic: ^0.1.3
   proximity_hash: ^2.0.0
