--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,38 +3,39 @@ description: Fast app to see bus schedules and plan routes
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.4.0+14
+version: 1.5.0+15
 
 environment:
-  sdk: ">=2.17.0 <3.0.0"
+  sdk: ">=3.1.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  intl: ^0.17.0
-  geolocator: ^9.0.0
-  http: ^0.13.3
-  csv: ^5.0.0
-  osm_nominatim: ^2.0.1
-  flutter_map: ^2.1.1
-  sqflite: ^2.0.0+3
+  intl: ^0.18.1
+  geolocator: ^10.1.0
+  http: ^1.1.2
+  csv: ^5.1.1
+  osm_nominatim: ^3.0.0
+  flutter_map: ^6.1.0
+  sqflite: ^2.3.0
   shared_preferences: ^2.0.7
   google_polyline_algorithm: ^3.1.0
-  flutter_riverpod: ^1.0.3
-  adaptive_dialog: ^1.2.0
-  emoji_picker_flutter: ^1.0.7
-  diacritic: ^0.1.3
-  proximity_hash: ^2.0.0
-  fading_edge_scrollview: ^3.0.0
+  flutter_riverpod: ^2.4.9
+  adaptive_dialog: ^1.10.1
+  emoji_picker_flutter: ^1.6.3
+  diacritic: ^0.1.4
+  proximity_hash: ^2.1.0
+  fading_edge_scrollview: ^4.0.0
   introduction_screen: ^2.1.0
-  cached_network_image: ^3.1.0
+  cached_network_image: ^3.3.0
+  reorderables: ^0.6.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.9.2"
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
