--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   introduction_screen: ^2.1.0
   cached_network_image: ^3.3.0
   reorderables: ^0.6.0
+  logging: ^1.2.0
 
 dev_dependencies:
   flutter_test:
