--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -8,7 +8,7 @@ plugins {
 android {
     namespace = "info.zverev.ilya.quick_bus"
     compileSdk = flutter.compileSdkVersion
-    ndkVersion = '27.0.12077973'
+    ndkVersion = flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_21
